Updated the volume 8 second edition with the tenth article code

--- a/vol8-2-article10.html
+++ b/vol8-2-article10.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta name="citation_title" content="The influence of social media on
-    knowledge-sharing practices among
-    women entrepreneurs in Windhoek,
-    Namibia" />
+    <meta name="citation_title" content="The role of digital humanities in the
+    preservation of indigenous
+    knowledge at the National Museums
+    of Kenya" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol8-2-article8.html" />
-    <meta name="citation_author" content="Anna Leonard" />
+    <meta name="citation_author" content="Afline Susan Awuor" />
+    <meta name="citation_author" content="Grace Wambui Kamau" />
+    <meta name="citation_author" content="Ashah Owano" />
     <meta name="citation_publication_date" content="2023/12/13" />
     <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
     <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man 8.2.28.pdf" />
     <meta name="citation_volume" content="8" />
     <meta name="citation_issue" content="2" />
-    <meta name="citation_firstpage" content="149" />
-    <meta name="citation_lastpage" content="169" />
+    <meta name="citation_firstpage" content="170" />
+    <meta name="citation_lastpage" content="180" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -77,70 +79,75 @@ women entrepreneurs in Windhoek,
 Namibia
                         </h3>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Anna Leonard
+                            Afline Susan Awuor
                             <br>
-                            Senior Librarian - Research Support Services
-University of Namibia
+                            The Technical University of Kenya
                             <br>
-                            aleonard@unam.na
+                            aflineawwuor@gmail.com
                         </p>
-                        
+                        <p style="text-align: center;" class="text-white-75 mb-4">
+                            Grace Wambui Kamau
+                            <br>
+                            The Technical University of Kenya
+                            <br>
+                            grace.kamau6@gmail.com
+                        </p>
+                        <p style="text-align: center;" class="text-white-75 mb-4">
+                            Ashah Owano
+                            <br>
+                            Technical University of Kenya
+                            <br>
+                            maryowino715@gmail.com
+                        </p>
                         <p>
                             <strong>Abstract</strong>
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            – This study investigated the knowledge sharing of entrepreneurs
-                            in the realms of social media technology. It explores how social media influences
-                            women entrepreneurs' knowledge-sharing and business processes in Windhoek,
-                            Namibia.
+                            – Digital humanities offer new possibilities for preserving and
+                            sharing indigenous knowledge. This paper investigates the role of digital
+                            humanities in preserving indigenous knowledge at the National Museums of
+                            Kenya. The objectives are to determine the extent to which digital humanities are
+                            used in the management, preservation and showcase of indigenous knowledge at
+                            the National Museums of Kenya and establish the challenges and opportunities in
+                            the use of digital humanities in the preservation of indigenous knowledge.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                           – The study adopted a qualitative case study design, using semi-
-                           structured interviews to collect data from female entrepreneurs in Windhoek.
-                           Twenty woman entrepreneurs were sampled using snowball sampling. A
-                           qualitative content analysis was used to analyse the data.
+                           – A qualitative research method was adopted to collect qualitative data
+                           from the literature review and purposely selected museum staff through
+                           interviews. Data was analysed thematically.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            – The study's results show that social media is significant for sharing
-                            knowledge and creating and seeking knowledge. Women entrepreneurs apply
-                            knowledge shared on social media to advance their business processes and
-                            enhance the skills of their workforce. WhatsApp, Facebook, TikTok, and
-                            Instagram are the most commonly used social platforms. The study also
-                            highlights the potential benefits women entrepreneurs gain from using social
-                            media, such as cost-effective marketing and advertising platforms, the ability to
-                            engage with a broader population and collaborate with fellow entrepreneurs, the
-                            ability to get feedback from customers on services and products, which in turn
-                            improve customer loyalty, brand identity and reputation.
+                            – The findings indicate that preservation and management of indigenous
+                            knowledge are crucial for maintaining cultural identity, facilitating knowledge
+                            sharing, and raising awareness about the richness and diversity of indigenous
+                            cultures in Kenya and beyond.
                          </p>
 
                             <p class="text-white-75 mb-4">
                                 <em>Implications</em>
-                               –  The findings of this study have practical implications for supporting
-                               organisations such as libraries in providing training to business enterprises
-                               concerning knowledge management and sharing.
+                               –  The study's results can serve as a model for similar initiatives in
+                               Africa and beyond.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                           – This study adds new insights and perspectives on how women
-                           entrepreneurs use information and communication technologies (ICTs) by
-                           accentuating social media as a tool for knowledge management in a developing
-                           country. The study findings are significant to business enterprises and institutions
-                           supporting women entrepreneurs in countries with contexts similar to Namibia’s.
+                           – This is an original paper which investigates the role of digital
+                           humanities in preserving indigenous knowledge at the National Museums of
+                           Kenya.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
                         </p>
                         <p class="text-white-75 mb-4">
-                            Social media platforms, women entrepreneurs, business processes, knowledge
-management, knowledge exchange              
+                            Culture, heritage, digital humanities, knowledge sharing, modernisation,
+globalisation     
                          </p>
                         <div>
-                            <a href="assets/img/Man 8.2.28.pdf"
-                                target="blank">The influence of social media on knowledge-sharing
-                                practices among women entrepreneurs in Windhoek, Namibia</a>
+                            <a href="assets/img/Man 8.2.29.pdf"
+                                target="blank">The role of digital humanities
+                                in the preservation of indigenous knowledge at the National Museums of Kenya</a>
                         </div>
                     </article>
                 </div>
