Updated the volume 8 second edition with the 11th article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -234,12 +234,12 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article11.html"
+                    href="vol8-2-article11.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The Use of Social Media for Knowledge Exchange in the Era
-                    of Misinformation by the Tanzania Higher Education
-                    Students</a
+                    >Using open access institutional
+                    repository policy to improve content
+                    in four Tanzanian public universities</a
                   >
                 </li>
                 <br />
