Added the comment and formmete the document

--- a/currentissues.html
+++ b/currentissues.html
@@ -119,10 +119,9 @@
                     href="vol8-2-article1.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Accessibility and use of electronic
-                    resources for digital reference
-                    services among university libraries in
-                    southern Nigeria</a
+                    >Accessibility and use of electronic resources for digital
+                    reference services among university libraries in southern
+                    Nigeria</a
                   >
                 </li>
                 <br />
@@ -131,22 +130,26 @@
                     href="vol8-2-article2.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The extent of social media usage for
-                    exchanging knowledge by higher
-                    education students in Tanzania</a
+                    >The extent of social media usage for exchanging knowledge
+                    by higher education students in Tanzania</a
                   >
                 </li>
                 <br />
+                <!-- This code is written in HTML -->
+
+                <!-- Summary Comment: -->
+                <!-- This code represents a list item with a link to an article. The link is styled with a white color and opens in a new tab. The article discusses the moderating effect of social media usage on factors influencing workplace knowledge sharing, aiming to create a predictive model. -->
+
                 <li class="nav-item">
                   <a
                     href="vol8-2-article3.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The moderating effect of social
-                    media usage on factors influencing
-                    workplace knowledge sharing:
-                    towards a predictive model</a
                   >
+                    The moderating effect of social media usage on factors
+                    influencing workplace knowledge sharing: towards a
+                    predictive model
+                  </a>
                 </li>
                 <br />
                 <li class="nav-item">
@@ -154,10 +157,9 @@
                     href="vol8-2-article4.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Online newspaper reading patterns
-                    of a university community before and
-                    during the COVID-19 pandemic: the
-                    case of the University of Venda</a
+                    >Online newspaper reading patterns of a university community
+                    before and during the COVID-19 pandemic: the case of the
+                    University of Venda</a
                   >
                 </li>
                 <br />
@@ -166,11 +168,9 @@
                     href="vol8-2-article5.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Students’ experiences with the
-                    utilisation of the 4IR technologies in
-                    online learning: a case study of
-                    institutions of higher learning in
-                    Botswana and Zambia</a
+                    >Students’ experiences with the utilisation of the 4IR
+                    technologies in online learning: a case study of
+                    institutions of higher learning in Botswana and Zambia</a
                   >
                 </li>
                 <br />
@@ -179,9 +179,8 @@
                     href="vol8-2-article6.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Preservation of organisational
-                    memory at the National University of
-                    Science and Technology, Zimbabwe</a
+                    >Preservation of organisational memory at the National
+                    University of Science and Technology, Zimbabwe</a
                   >
                 </li>
                 <br />
@@ -190,10 +189,8 @@
                     href="vol8-2-article7.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Knowledge management of
-                    consumer lived experience on digital
-                    platforms to enhance organisational
-                    performance</a
+                    >Knowledge management of consumer lived experience on
+                    digital platforms to enhance organisational performance</a
                   >
                 </li>
                 <br />
@@ -202,8 +199,7 @@
                     href="vol8-2-article8.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Impact of smart classrooms in
-                    higher education on academic
+                    >Impact of smart classrooms in higher education on academic
                     performance: a meta-analysis</a
                   >
                 </li>
@@ -213,10 +209,8 @@
                     href="vol8-2-article9.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The influence of social media on
-                    knowledge-sharing practices among
-                    women entrepreneurs in Windhoek,
-                    Namibia</a
+                    >The influence of social media on knowledge-sharing
+                    practices among women entrepreneurs in Windhoek, Namibia</a
                   >
                 </li>
                 <br />
@@ -225,10 +219,8 @@
                     href="vol8-2-article10.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The role of digital humanities in the
-                    preservation of indigenous
-                    knowledge at the National Museums
-                    of Kenya</a
+                    >The role of digital humanities in the preservation of
+                    indigenous knowledge at the National Museums of Kenya</a
                   >
                 </li>
                 <br />
@@ -237,9 +229,8 @@
                     href="vol8-2-article11.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Using open access institutional
-                    repository policy to improve content
-                    in four Tanzanian public universities</a
+                    >Using open access institutional repository policy to
+                    improve content in four Tanzanian public universities</a
                   >
                 </li>
                 <br />
