Updated the volume 8 and article 12

--- a/currentissues.html
+++ b/currentissues.html
@@ -234,6 +234,17 @@
                   >
                 </li>
                 <br />
+                <li class="nav-item">
+                  <a
+                    href="vol8-2-article12.html"
+                    target="_blank"
+                    style="color: antiquewhite"
+                    >Use of Massive Open Online Course for digital skills
+                    development by undergraduates in selected universities in
+                    Ibadan, Nigeria
+                  </a>
+                </li>
+                <br />
                 <br />
               </ol>
             </article>
