--- a/vol8-2-article12.html
+++ b/vol8-2-article12.html
@@ -9,7 +9,7 @@
     <meta name="citation_title" content="Using open access institutional
     repository policy to improve content
     in four Tanzanian public universities" />
-    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol8-2-article11.html" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol8-2-article12.html" />
     <meta name="citation_author" content="Anna Shangwe Mbughuni" />
     <meta name="citation_author" content="Wulystain P. Mtega" />
     <meta name="citation_author" content="Andrew W. Malekani" />
@@ -77,79 +77,72 @@ repository policy to improve content
 in four Tanzanian public universities
                         </h3>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Anna Shangwe Mbughuni
+                            Goodness Johanna Otitoju
                             <br>
-                            Mzumbe University
-                            <br>
-                            asmbughuni@mzumbe.ac.tz
+                            University of Ibadan, Nigeria 
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Wulystain P. Mtega
+                            Williams Ezinwa Nwagwu
                             <br>
-                            Sokoine University of Agriculture
+                            University of Ibadan, Nigeria, and 
+University of South Africa, Pretoria, South Africa
                             <br>
-                            wmtega@sua.ac.tz
-                        </p>
-                        <p style="text-align: center;" class="text-white-75 mb-4">
-                            Andrew W. Malekani
-                            <br>
-                            Sokoine University of Agriculture
-                            <br>
-                            malekani@sua.ac.tz
+                            willieezi@yahoo.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            – This study investigated how OAIR policy can be used to
-                            improve OAIR contents. Specifically, the study sought to determine the level of
-                            awareness of the OAIR policy among academic staff members in the selected
-                            universities, examine the use of OAIR policy in the collection of OAIR contents
-                            in the selected universities, and find out how the OAIR policy can be used to
-                            improve the growth of OAIR content.
+                            – The rationale of this study is to examine the use, performance 
+                            expectancy, effort expectancy, social influence, facilitating conditions, and internet 
+                            accessibility/availability  of  the  use  of  MOOC  for  digital  skills  development  by 
+                            undergraduates in selected universities in Ibadan, Nigeria. 
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                           – Systematic random and purposive sampling procedures were used to
-                           obtain the study sample. The sample size included 413 academic staff and eight
-                           key informants. Quantitative and qualitative data were obtained from a structured
-                           questionnaire, interview and secondary data. Data were analysed by using SPSS
-                           version 22 and content analysis.
+                           – This  study  adopted  a  descriptive  survey  research  design.  This 
+                           research  targets  378  of  the  21764  undergraduate  students  in  private  and  public 
+                           universities  in  Ibadan  Metropolis,  Oyo  state.  Undergraduates  are  suitable  targets 
+                           for the adoption of MOOC because they are potential early adopters of 
+                           information technologies and have diverse educational needs. 
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
-                            – Key findings revealed that 46.2 per cent of the respondents were aware
-                            of the OAIR policy. The findings also revealed that 45.5 per cent indicated that
-                            OAIR policy directs them to submit their scholarly publications in OAIRs and
-                            also specify the types of content to be held in OAIRs.
+                            – A  substantial  portion  of  respondents  (77.8%)  utilised  MOOC,  with 
+                            72%  enrolling  and  60.8%  completing  their  enrolled  courses.  Additionally,  most 
+                            agreed  that  MOOC  surpass  traditional  classrooms  (mean=3.24,  SD=0.728)  in 
+                            clarity, while most students reported receiving adequate support during 
+                            challenges.  Except  for  IA/A,  all  the  UTAUT  variables  significantly  predicted 
+                            undergraduate use of MOOC in the universities in Ibadan, Nigeria.  
                          </p>
 
                             <p class="text-white-75 mb-4">
                                 <em>Implications</em>
-                               –  Therefore, the study concluded that OAIRs policy forms the vital
-                               components that have a positive influence on the growth of content in OAIRs
-                               without a policy, OAIRs may remain virtually empty. Therefore, creating
-                               awareness of OAIR policy and emphasising more in the area of submission of
-                               content would enhance the growth of OAIR content.
+                               –  The  findings  of  this  study  suggest  that  MOOC  is  growing  in 
+                               acceptance  and  utilisation  among  students,  thus  indicating  an  embrace  of  digital 
+                               learning methods in education. These results highlight the further exploration into 
+                               the  factors  influencing  MOOC  adoption,  touching  more  profound  students' 
+                               motivations and barriers that enhance course completion rates.  
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                           – This is an original study on how OAIR policy can be used to improve
-                           OAIR contents in four public universities in Tanzania.
+                           – This study stands out due to its comprehensive assessment of various 
+                           factors  influencing  MOOC  adoption  and  utilisation  among  students,  offering  a 
+                           holistic view of their experiences and perceptions.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
                         </p>
                         <p class="text-white-75 mb-4">
-                            OAIR policy, mandate policy, submission policy, scholarly publications,
-universities, Tanzania
+                            Massive Open Online Course, MOOC, digital skills development, undergraduates, 
+                            Nigeria 
                          </p>
                         <div>
-                            <a href="assets/img/Man 8.2.33.pdf"
-                                target="blank">Using open access
-                                institutional repository policy to improve content in four Tanzanian public
-                                universities</a>
+                            <a href="assets/img/Man 8.2.26.pdf"
+                                target="blank">Use of Massive Open Online Course for 
+                                digital skills development by undergraduates in selected universities in Ibadan, 
+                                Nigeria</a>
                         </div>
                     </article>
                 </div>
