Updated the diffrect section of the files for volume 8

--- a/vol8-2-article9.html
+++ b/vol8-2-article9.html
@@ -12,6 +12,7 @@
     Namibia" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol8-2-article8.html" />
     <meta name="citation_author" content="Anna Leonard" />
+    <meta name="citation_author" content="Lucy Kiana" />
     <meta name="citation_publication_date" content="2023/12/13" />
     <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
     <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man 8.2.28.pdf" />
@@ -84,7 +85,13 @@ University of Namibia
                             <br>
                             aleonard@unam.na
                         </p>
-                        
+                        <p style="text-align: center;" class="text-white-75 mb-4">
+                            Lucy Kiana
+                            <br>
+                            Deputy University Librarian, Africa International University, Kenya
+                            <br>
+                            lucy.kiana@aiu.ac.ke 
+                        </p>
                         <p>
                             <strong>Abstract</strong>
                         </p>
