--- a/vol8-1-2023.html
+++ b/vol8-1-2023.html
@@ -230,6 +230,18 @@
                   >
                 </li>
                 <br />
+                <li class="nav-item">
+                  <a
+                    href="vol8-1-article12.html"
+                    target="_blank"
+                    style="color: antiquewhite"
+                    >The Opportunities and Challenges
+                    of Integrating Information Literacy
+                    as a Credit-Bearing Module into
+                    First-Year Academic Programmes</a
+                  >
+                </li>
+                <br />
                 <br />
               </ol>
             </article>
