--- a/currentissues.html
+++ b/currentissues.html
@@ -245,6 +245,18 @@
                   </a>
                 </li>
                 <br />
+                <li class="nav-item">
+                  <a
+                    href="vol8-2-article13.html"
+                    target="_blank"
+                    style="color: antiquewhite"
+                    >Integration of gamification tools in
+                    learning management systems for
+                    augmenting students’ academic
+                    performance in higher education
+                  </a>
+                </li>
+                <br />
                 <br />
               </ol>
             </article>
