Formatted the different parts of the document

--- a/vol8-1-2023.html
+++ b/vol8-1-2023.html
@@ -235,10 +235,9 @@
                     href="vol8-1-article12.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >The Opportunities and Challenges
-                    of Integrating Information Literacy
-                    as a Credit-Bearing Module into
-                    First-Year Academic Programmes</a
+                    >The Opportunities and Challenges of Integrating Information
+                    Literacy as a Credit-Bearing Module into First-Year Academic
+                    Programmes</a
                   >
                 </li>
                 <br />
