Removed the word document

--- a/currentissues.html
+++ b/currentissues.html
@@ -96,7 +96,11 @@
                   by higher education students in Tanzania</a>
               </li>
               <br />
-                   <li class="nav-item">
+
+              <!-- Summary Comment: -->
+              <!-- This code represents a list item with a link to an article. The link is styled with a white color and opens in a new tab. The article discusses the moderating effect of social media usage on factors influencing workplace knowledge sharing, aiming to create a predictive model. -->
+
+              <li class="nav-item">
                 <a href="vol8-2-article3.html" target="_blank" style="color: antiquewhite">
                   The moderating effect of social media usage on factors
                   influencing workplace knowledge sharing: towards a
