Editted the list of the editorial board

--- a/editorialboard.html
+++ b/editorialboard.html
@@ -62,6 +62,7 @@
                             <li>Dr. Harrison Bii, University of Kabianga, Kenya</li>
                             <li>Dr. Musa Olaka, University of Kansas, USA</li>
                             <li>Dr. Joan Wakasa Murumba, Texas A & M International University, USA</li>
+                            <li>Dr. Joan Wakasa Murumba, United  International University, USA</li>
                         </ol>
                     </div>
                     <div class="col-lg-8 text-center">
