Update dated the article four for volume 9 first edition

--- a/vol9-1-article1.html
+++ b/vol9-1-article1.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta name="citation_title" content="Using open access institutional
-    repository policy to improve content
-    in four Tanzanian public universities" />
+    <meta name="citation_title" content="Assessing digital preservation
+    strategies implemented for the
+    institutional repository in Kaimosi
+    Friends University Library" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol9-1-article1.html" />
     <meta name="citation_author" content="Jacob Bushuru Musisi" />
     <meta name="citation_author" content="Caroline Mutwiri" />
