--- a/vol9-1-article2.html
+++ b/vol9-1-article2.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta name="citation_title" content="Using open access institutional
-    repository policy to improve content
-    in four Tanzanian public universities" />
+    <meta name="citation_title" content="Library service
+    provision for improved satisfaction among library users in selected university libraries
+    in Tanzania" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol9-1-article2.html" />
     <meta name="citation_author" content="Kaishe-Mulungu, Dativa Donati" />
     <meta name="citation_author" content="Lwehabura, Mugyabuso Julius Festo" />
