--- a/vol9-1-article3.html
+++ b/vol9-1-article3.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta name="citation_title" content="Using open access institutional
-    repository policy to improve content
-    in four Tanzanian public universities" />
+    <meta name="citation_title" content="Human capital management
+    information system: scope of application and challenges facing the public sector in
+    Tanzania" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol9-1-article3.html" />
     <meta name="citation_author" content="Hadija Matimbwa" />
     <meta name="citation_author" content="Wole Olatokun" />
