--- a/vol9-1-article4.html
+++ b/vol9-1-article4.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <meta name="citation_title" content="Using open access institutional
-    repository policy to improve content
-    in four Tanzanian public universities" />
+    <meta name="citation_title" content="Exploring the utilisation of ChatGPT in academic
+    libraries: a self-reflection perspective" />
     <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol9-1-article4.html" />
     <meta name="citation_author" content="Maropene Ramabina" />
     <meta name="citation_publication_date" content="2024/05/27" />
