--- a/currentissues.html
+++ b/currentissues.html
@@ -84,16 +84,17 @@
             </p>
             <ol style="text-align: justify; color: wheat">
               <li class="nav-item">
-                <a href="vol8-2-article1.html" target="_blank" style="color: antiquewhite">Accessibility and use of
-                  electronic resources for digital
-                  reference services among university libraries in southern
-                  Nigeria</a>
+                <a href="vol9-1-article1.html" target="_blank" style="color: antiquewhite">Assessing digital preservation
+                  strategies implemented for the
+                  institutional repository in Kaimosi
+                  Friends University Library</a>
               </li>
               <br />
               <li class="nav-item">
-                <a href="vol8-2-article2.html" target="_blank" style="color: antiquewhite">The extent of social media
-                  usage for exchanging knowledge
-                  by higher education students in Tanzania</a>
+                <a href="vol9-1-article2.html" target="_blank" style="color: antiquewhite">Library service provision for
+                  improved satisfaction among library
+                  users in selected university libraries in
+                  Tanzania</a>
               </li>
               <br />
 
@@ -101,80 +102,26 @@
               <!-- This code represents a list item with a link to an article. The link is styled with a white color and opens in a new tab. The article discusses the moderating effect of social media usage on factors influencing workplace knowledge sharing, aiming to create a predictive model. -->
 
               <li class="nav-item">
-                <a href="vol8-2-article3.html" target="_blank" style="color: antiquewhite">
-                  The moderating effect of social media usage on factors
-                  influencing workplace knowledge sharing: towards a
-                  predictive model
+                <a href="vol9-1-article3.html" target="_blank" style="color: antiquewhite">
+                  Human capital management
+information system: scope of
+application and challenges facing the
+public sector in Tanzania
                 </a>
               </li>
               <br />
               <li class="nav-item">
-                <a href="vol8-2-article4.html" target="_blank" style="color: antiquewhite">Online newspaper reading
-                  patterns of a university community
-                  before and during the COVID-19 pandemic: the case of the
-                  University of Venda</a>
+                <a href="vol9-1-article4.html" target="_blank" style="color: antiquewhite">Exploring the utilisation of
+                  ChatGPT in academic libraries: a
+                  self-reflection perspective</a>
               </li>
               <br />
               <li class="nav-item">
-                <a href="vol8-2-article5.html" target="_blank" style="color: antiquewhite">Students’ experiences with
-                  the utilisation of the 4IR
-                  technologies in online learning: a case study of
-                  institutions of higher learning in Botswana and Zambia</a>
+                <a href="vol9-1-article5.html" target="_blank" style="color: antiquewhite">Online learning environment and
+                  learners’ learning effectiveness at the
+                  Distance Learning Centre, University
+                  of Ibadan</a>
               </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article6.html" target="_blank" style="color: antiquewhite">Preservation of
-                  organisational memory at the National
-                  University of Science and Technology, Zimbabwe</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article7.html" target="_blank" style="color: antiquewhite">Knowledge management of
-                  consumer lived experience on
-                  digital platforms to enhance organisational performance</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article8.html" target="_blank" style="color: antiquewhite">Impact of smart classrooms in
-                  higher education on academic
-                  performance: a meta-analysis</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article9.html" target="_blank" style="color: antiquewhite">The influence of social media
-                  on knowledge-sharing
-                  practices among women entrepreneurs in Windhoek, Namibia</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article10.html" target="_blank" style="color: antiquewhite">The role of digital
-                  humanities in the preservation of
-                  indigenous knowledge at the National Museums of Kenya</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article11.html" target="_blank" style="color: antiquewhite">Using open access
-                  institutional repository policy to
-                  improve content in four Tanzanian public universities</a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article12.html" target="_blank" style="color: antiquewhite">Use of Massive Open Online
-                  Course for digital skills
-                  development by undergraduates in selected universities in
-                  Ibadan, Nigeria
-                </a>
-              </li>
-              <br />
-              <li class="nav-item">
-                <a href="vol8-2-article13.html" target="_blank" style="color: antiquewhite">Integration of gamification
-                  tools in
-                  learning management systems for
-                  augmenting students’ academic
-                  performance in higher education
-                </a>
-              </li>
-              <br />
               <br />
             </ol>
           </article>
