Updated the current issues in volume 9

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                     <div class="col-lg-6">
-                        <form name="sentMessage" action="mailto:tom.kwanya@gmail.com"  novalidate="novalidate" method="POST">
+                        <form name="sentMessage" action="sendEmail.php"  novalidate="novalidate" method="POST">
                             <div class="form-row">
                                 <div class="col-sm-12 control-group">
                                     <label for="name"> Full Name</label>
