--- a/currentissues.html
+++ b/currentissues.html
@@ -123,6 +123,35 @@ public sector in Tanzania
                   of Ibadan</a>
               </li>
               <br />
+              <li class="nav-item">
+                <a href="vol9-1-article6.html" target="_blank" style="color: antiquewhite">Multimedia-based instructional
+                  delivery practices for interactive
+                  teaching and learning in selected
+                  secondary schools in Nigeria</a>
+              </li>
+              <br />
+              <li class="nav-item">
+                <a href="vol9-1-article7.html" target="_blank" style="color: antiquewhite"> Understanding the legal
+                  framework in Research Data Management: a study of selected academic libraries in
+                  Kenya</a>
+              </li>
+              <br />
+              <li class="nav-item">
+                <a href="vol9-1-article8.html" target="_blank" style="color: antiquewhite"> Value of academic libraries in improving
+                  higher education institutions' knowledge management practices</a>
+              </li>
+              <br />
+              <li class="nav-item">
+                <a href="vol9-1-article9.html" target="_blank" style="color: antiquewhite">  Importance of human resources management
+                  practices in enhancing knowledge retention in the cross-border mergers of the
+                  telecommunications industry in Lesotho</a>
+              </li>
+              <br />
+              <li class="nav-item">
+                <a href="vol9-1-article10.html" target="_blank" style="color: antiquewhite">  Aspects of travel information
+                  behaviour of postgraduate students of a high education institution in Nigeria</a>
+              </li>
+              <br />
             </ol>
           </article>
         </div>
